--- a/roles/hadoop/templates/core-site.xml.j2
+++ b/roles/hadoop/templates/core-site.xml.j2
@@ -20,7 +20,7 @@
 <configuration>
 	  <property>
         <name>fs.defaultFS</name>
-        <value>hdfs://{{ hostvars[namendoe_info].hdp_hostname }}:{{ hostvars[namendoe_info].hdp_namenode_port }}</value>
+        <value>hdfs://{{ hostvars[namenode_info].hdp_hostname }}:{{ hostvars[namenode_info].hdp_namenode_port }}</value>
     </property>
     <property>
         <name>io.file.buffer.size</name>
