--- a/roles/hadoop/templates/mapred-site.xml.j2
+++ b/roles/hadoop/templates/mapred-site.xml.j2
@@ -1,3 +1,4 @@
+{% set yarn_info = groups['hdp_yarn'][0] %}
 <?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <!--
