--- a/roles/ssh/templates/ssh.sh.j2
+++ b/roles/ssh/templates/ssh.sh.j2
@@ -1,6 +1,6 @@
 #!/usr/bin/expect
 {% for host in groups['hdp'] %}
-spawn scp -r {{ tmp_dir }}/a.tmp root@{{ hostvars[host].zk_hostname }}:/root
+spawn scp -r {{ tmp_dir }}/a.tmp root@{{ hostvars[host].hdp_hostname }}:/root
 expect "(yes/no)" { send "yes\r" }
 interact
 {% endfor %}
