--- a/roles/hbase/templates/regionservers.j2
+++ b/roles/hbase/templates/regionservers.j2
@@ -1,3 +1,3 @@
 {% for host in groups['hbase_regionservers'] %}
-{{{ hostvars[host].hbase_hostname }}}
+{{ hostvars[host].hbase_hostname }}
 {% endfor %}
