--- a/roles/hbase/templates/hbase-site.xml.j2
+++ b/roles/hbase/templates/hbase-site.xml.j2
@@ -38,4 +38,8 @@
         <name>hbase.zookeeper.property.dataDir</name>
         <value>{{ zookeeper_data_dir }}</value>
     </property>
+    <property>
+        <name>hbase.procedure.store.wal.use.hsync</name>
+        <value>false</value>
+    </property>
 </configuration>
