配置文件修改

--- a/roles/hbase/templates/hbase-site.xml.j2
+++ b/roles/hbase/templates/hbase-site.xml.j2
@@ -43,7 +43,7 @@
         <value>{{ zookeeper_data_dir }}</value>
     </property>
     <property>
-        <name>hbase.procedure.store.wal.use.hsync</name>
+        <name>hbase.unsafe.stream.capability.enforce</name>
         <value>false</value>
     </property>
 </configuration>
